--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,18 @@ appdirs==1.4.4
 certifi==2020.12.5
 chardet==4.0.0
 colorama==0.4.4
+cycler==0.10.0
 distlib==0.3.1
 filelock==3.0.12
 idna==2.10
+kiwisolver==1.3.1
+matplotlib==3.4.2
+numpy==1.20.3
 pbr==5.5.1
+Pillow==8.2.0
 pymongo==3.11.4
+pyparsing==2.4.7
+python-dateutil==2.8.1
 requests==2.25.1
 six==1.15.0
 stevedore==3.2.2
